--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 *{
-    text-align: center;
-    align-items: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -8,9 +6,12 @@ body{
     background-color: rgb(109, 238, 255);
 }
 
+header{
+    text-align: center;
+}
 .imagem{
-    height:150px;
-    width: 250px;
+    height:100px;
+    width: 200px;
     margin-bottom: -16px;
 }
 
@@ -18,3 +19,14 @@ body{
     text-align: center;
 }
 
+ul{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    list-style: none;
+    align-items: center;
+}
+
+p{
+    font-size: 14px;
+}
